@@ -14,6 +14,7 @@ CHANGELOG Roundcube Webmail
 - Fix bug where names of downloaded files could be malformed when derived from the message subject (#5404)
 - Fix so "All" messages selection is resetted on search reset (#5413)
 - Fix bug where folder creation could fail if personal namespace contained more than one entry (#5403)
+- Fix error causing empty INBOX listing in Firefox when using an URL with user:password specified (#5400)
 
 RELEASE 1.2.1
 -------------
